--- a/src/css/sass/partials/footer.scss
+++ b/src/css/sass/partials/footer.scss
@@ -7,7 +7,7 @@
 .footer {
 	margin-top: 50px;
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include container();
 		text-align: center;
 	}
@@ -20,14 +20,22 @@
 		@include span(1 of 1 0);
 
 		.footerMenu {
-			@include span(2.5);
+			display: block;
+			float: left;
+			max-width: 20%;
+
 			list-style: none;
-			padding: 0;
+			padding: 0 15px;
 
 			border-right: solid 1px #fff;
 			padding-right: 20px;
+			height: 140px;
 
-			@include susy-media (max-width $wrapper-width) {
+			&:nth-child(3), &:nth-child(4) {
+				max-width: 180px;
+			}
+
+			@include susy-media (max-width 960px) {
 				@include span(12);
 				border: none;
 				border-bottom: solid 1px #fff;
@@ -42,6 +50,7 @@
 
 			a {
 				color: #fff;
+				font-weight: 500 !important;
 			}
 
 			li {
@@ -58,7 +67,7 @@
 
 		#menuInstitucional {
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				border-right: none;
 				padding-right: 0;
 				padding-bottom: 30px;
