--- a/src/css/sass/partials/header.scss
+++ b/src/css/sass/partials/header.scss
@@ -22,7 +22,7 @@
 		margin-bottom: $menuAltura;
 	}
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		height: 80vh;
 		border-bottom: solid 8px $azul;
 		overflow: visible;
@@ -36,7 +36,7 @@
 		overflow: hidden;
 		font-weight: 500;
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			height: initial;
 			border-radius: 0;
 
@@ -52,7 +52,7 @@
 		.logo, #telefoneHead {
 			@include span(3);
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				@include span(12);
 				position: relative;
 			}
@@ -62,7 +62,7 @@
 			.logo-img {
 				width: 150px;
 
-				@include susy-media (max-width $wrapper-width) {
+				@include susy-media (max-width 960px) {
 					display: block;
 					margin: 0 auto;
 				}
@@ -132,7 +132,7 @@
 			text-align: right;
 			line-height: 2;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				text-align: center;
 
 				position: absolute;
@@ -146,7 +146,7 @@
 				font-size: 3rem;
 				font-weight: 600;
 
-				@include susy-media (max-width $wrapper-width) {
+				@include susy-media (max-width 960px) {
 					font-size: 2rem;
 					font-weight: 300;
 				}
@@ -154,7 +154,7 @@
 				span {
 					font-size: 2rem;
 
-					@include susy-media (max-width $wrapper-width) {
+					@include susy-media (max-width 960px) {
 						font-size: 1em;
 					}
 				}
@@ -332,7 +332,7 @@
 			list-style: none;
 			padding: 0;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 
 			}
 
@@ -401,7 +401,7 @@
 		opacity: 1;
 	  }
 
-	  @include susy-media (max-width $wrapper-width) {
+	  @include susy-media (max-width 960px) {
 	  	display: block;
 	  }
 	}
