--- a/src/css/sass/partials/home.scss
+++ b/src/css/sass/partials/home.scss
@@ -40,14 +40,14 @@
 #noticias {
 	@include span(5);
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 	}
 
 	.primeiraNoticia {
 		@include span(3 of 5);
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			@include span(1 of 1 0);
 			margin-bottom: 10px;
 		}
@@ -64,7 +64,7 @@
 		height: 210px;
 		position: relative;
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			@include span(1 of 1 0);
 			margin-bottom: 10px;
 		}
@@ -90,7 +90,7 @@
 #videos {
 	@include span(3);
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 		overflow: hidden;
 	}
@@ -106,7 +106,7 @@
 			width: 220px;
 			height: 152px;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				margin: auto;
 				position: relative;
 			}
@@ -126,7 +126,7 @@
 		text-align: center;
 		line-height: $ver-mais-height;
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			margin: auto;
 		}
 	}
@@ -135,7 +135,7 @@
 #downloads {
 	@include span(2);
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 
 		a {
@@ -150,7 +150,7 @@
 #contato {
 	@include span(2);
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 	}
 
