--- a/src/css/sass/partials/pages.scss
+++ b/src/css/sass/partials/pages.scss
@@ -167,7 +167,7 @@ article {
 		.type-post {
 			@include span(last 9);
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				@include span(1 of 1 0);
 			}
 
@@ -175,7 +175,7 @@ article {
 				@include span(4 of 10);
 				margin-top: 20px;
 
-				@include susy-media (max-width $wrapper-width) {
+				@include susy-media (max-width 960px) {
 					@include span(1 of 1 0);
 					margin: 0 0 0 -2px;
 				}
@@ -184,7 +184,7 @@ article {
 			p {
 				@include span(6 of 10);
 
-				@include susy-media (max-width $wrapper-width) {
+				@include susy-media (max-width 960px) {
 					@include span(1 of 1);
 				}
 			}
@@ -195,7 +195,7 @@ article {
 			background-color: #fff;
 			padding: 0 10px;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				@include span(1 of 1 0);
 			}
 
@@ -228,7 +228,7 @@ article {
 				@include span(1 of 1 0);
 				margin-top: 20px;
 
-				@include susy-media (max-width $wrapper-width) {
+				@include susy-media (max-width 960px) {
 					margin: 0 0 0 -2px;
 				}
 			}
@@ -245,7 +245,7 @@ article {
 	}
 }
 
-#emPessoas {
+#emInstitucional {
 	list-style: none;
 	padding: 0;
 	margin: 50px auto;
@@ -261,7 +261,7 @@ article {
 		margin: 0;
 		width: 180px;
 
-		@include susy-media (max-width $wrapper-width) {
+		@include susy-media (max-width 960px) {
 			background-image: none;
 			background-color: #17243E;
 			margin: 2px 0;
@@ -275,7 +275,7 @@ article {
 			margin-top: 10px;
 			display: block;
 
-			@include susy-media (max-width $wrapper-width) {
+			@include susy-media (max-width 960px) {
 				line-height: 3;
 				margin-top: 0;
 			}
@@ -333,9 +333,9 @@ article {
 	@include container();
 	display: block;
 	background-color: lighten($cinza, 20) !important;
-	background-position: 300px top !important;
+	background-position: right top !important;
 	background-size: contain !important;
-	height: 250px;
+	height: 200px;
 	color: #fff;
 	padding: 10px;
 	margin-bottom: 10px;
@@ -360,6 +360,16 @@ article {
 	}
 	&#box4 {
 		background: url(img/dnaPreBanner.png) no-repeat;
+	}
+
+	&#sus1 {
+		background: url(img/inovacaoLamp.png) no-repeat;
+	}
+	&#sus2 {
+		background: url(img/inovacaoFolha.png) no-repeat;
+	}
+	&#sus3 {
+		background: url(img/inovacaoPessoas.png) no-repeat;
 	}
 }
 
@@ -470,5 +480,34 @@ article {
 				font-size: 2rem;
 			}
 		}
+	}
+}
+
+.cadaDepoimento {
+	position: relative;
+	@include span(6 of $col .1);
+	height: 150px;
+	background-color: #eaeaea;
+
+	h4 {
+		color: $azul;
+		text-transform: uppercase;
+		font-size: 2rem;
+		margin-top: 20px;
+		margin-bottom: 10px;
+	}
+
+	p {
+		font-size: 1.5rem;
+	}
+
+	.thumbVideo {
+		float: left;
+		width: 150px;
+		height: 150px;
+		margin-right: 15px;
+		background-size: cover;
+		background-repeat: no-repeat;
+		background-position: 50% 50%;
 	}
 }
