--- a/src/css/sass/partials/sidebar.scss
+++ b/src/css/sass/partials/sidebar.scss
@@ -6,8 +6,9 @@
 
 aside.sideNoticias {
 	@include span(first 3);
+	max-width: 220px;
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 		margin-left: 7px;
 	}
@@ -67,7 +68,7 @@ aside.sideDownloads {
 	@include span(first 5);
 	background-color: #e6e6e6;
 
-	@include susy-media (max-width $wrapper-width) {
+	@include susy-media (max-width 960px) {
 		@include span(1 of 1 0);
 		margin-left: 7px;
 	}
