--- a/src/css/style.css
+++ b/src/css/style.css
@@ -210,7 +210,7 @@ input[type="search"] {
   margin: 0 auto;
   position: relative;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .wrapper {
     width: 100%;
   }
@@ -235,7 +235,7 @@ input[type="search"] {
 .header.headerMenuAberto {
   margin-bottom: 160px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header {
     height: 80vh;
     border-bottom: solid 8px #2C97BE;
@@ -250,7 +250,7 @@ input[type="search"] {
   overflow: hidden;
   font-weight: 500;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima {
     height: initial;
     border-radius: 0;
@@ -269,7 +269,7 @@ input[type="search"] {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima .logo, .header .barraDeCima #telefoneHead {
     width: 98.3333333333%;
     float: left;
@@ -281,7 +281,7 @@ input[type="search"] {
 .header .barraDeCima .logo .logo-img {
   width: 150px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima .logo .logo-img {
     display: block;
     margin: 0 auto;
@@ -346,7 +346,7 @@ input[type="search"] {
   text-align: right;
   line-height: 2;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima #telefoneHead {
     text-align: center;
     position: absolute;
@@ -360,7 +360,7 @@ input[type="search"] {
   font-size: 3rem;
   font-weight: 600;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima #telefoneHead h2 {
     font-size: 2rem;
     font-weight: 300;
@@ -369,7 +369,7 @@ input[type="search"] {
 .header .barraDeCima #telefoneHead h2 span {
   font-size: 2rem;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .barraDeCima #telefoneHead h2 span {
     font-size: 1em;
   }
@@ -590,7 +590,7 @@ input[type="search"] {
 .header .header__menu a:hover {
   opacity: 1;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .header .header__menu {
     display: block;
   }
@@ -829,8 +829,9 @@ aside.sideNoticias {
   float: left;
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
+  max-width: 220px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   aside.sideNoticias {
     width: 100%;
     float: left;
@@ -885,7 +886,7 @@ aside.sideDownloads {
   margin-right: 0.8333333333%;
   background-color: #e6e6e6;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   aside.sideDownloads {
     width: 100%;
     float: left;
@@ -957,7 +958,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
 .footer {
   margin-top: 50px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .footer {
     max-width: 100%;
     margin-left: auto;
@@ -979,16 +980,19 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   float: left;
 }
 .footer .azul .footerMenu {
-  width: 19.1666666667%;
+  display: block;
   float: left;
-  margin-left: 0.8333333333%;
-  margin-right: 0.8333333333%;
+  max-width: 20%;
   list-style: none;
-  padding: 0;
+  padding: 0 15px;
   border-right: solid 1px #fff;
   padding-right: 20px;
+  height: 140px;
 }
-@media (max-width: 1280px) {
+.footer .azul .footerMenu:nth-child(3), .footer .azul .footerMenu:nth-child(4) {
+  max-width: 180px;
+}
+@media (max-width: 960px) {
   .footer .azul .footerMenu {
     width: 98.3333333333%;
     float: left;
@@ -1006,6 +1010,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
 }
 .footer .azul .footerMenu a {
   color: #fff;
+  font-weight: 500 !important;
 }
 .footer .azul .footerMenu li a {
   display: inline-block;
@@ -1015,7 +1020,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   font-size: 1.4rem;
   line-height: 1;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .footer .azul #menuInstitucional {
     border-right: none;
     padding-right: 0;
@@ -1214,7 +1219,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #noticias {
     width: 100%;
     float: left;
@@ -1226,7 +1231,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   margin-left: 2%;
   margin-right: 2%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #noticias .primeiraNoticia {
     width: 100%;
     float: left;
@@ -1246,7 +1251,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   height: 210px;
   position: relative;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #noticias .noticiasSecundarias {
     width: 100%;
     float: left;
@@ -1273,7 +1278,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #videos {
     width: 100%;
     float: left;
@@ -1291,7 +1296,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   width: 220px;
   height: 152px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #videos .video .fotoVideo {
     margin: auto;
     position: relative;
@@ -1309,7 +1314,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   text-align: center;
   line-height: 54px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #videos .verMais {
     margin: auto;
   }
@@ -1321,7 +1326,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #downloads {
     width: 100%;
     float: left;
@@ -1340,7 +1345,7 @@ aside.sideDownloads #sidebarDownloads .maisDownloads li hr {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   #contato {
     width: 100%;
     float: left;
@@ -1581,7 +1586,7 @@ article:after {
   margin-left: 0.8333333333%;
   margin-right: 0.8333333333%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .single section .type-post {
     width: 100%;
     float: left;
@@ -1594,7 +1599,7 @@ article:after {
   margin-right: 1%;
   margin-top: 20px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .single section .type-post img {
     width: 100%;
     float: left;
@@ -1607,7 +1612,7 @@ article:after {
   margin-left: 1%;
   margin-right: 1%;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .single section .type-post p {
     width: 80%;
     float: left;
@@ -1621,7 +1626,7 @@ article:after {
   background-color: #fff;
   padding: 0 10px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .single section .type-downloads {
     width: 100%;
     float: left;
@@ -1653,7 +1658,7 @@ article:after {
   float: left;
   margin-top: 20px;
 }
-@media (max-width: 1280px) {
+@media (max-width: 960px) {
   .single section .type-downloads img {
     margin: 0 0 0 -2px;
   }
@@ -1667,7 +1672,7 @@ article:after {
   margin-top: 30px;
 }
 
-#emPessoas {
+#emInstitucional {
   list-style: none;
   padding: 0;
   margin: 50px auto;
@@ -1675,7 +1680,7 @@ article:after {
   text-align: center;
   width: 603px;
 }
-#emPessoas li.botaoTopo {
+#emInstitucional li.botaoTopo {
   display: inline-block;
   float: left;
   text-align: center;
@@ -1683,8 +1688,8 @@ article:after {
   margin: 0;
   width: 180px;
 }
-@media (max-width: 1280px) {
-  #emPessoas li.botaoTopo {
+@media (max-width: 960px) {
+  #emInstitucional li.botaoTopo {
     background-image: none;
     background-color: #17243E;
     margin: 2px 0;
@@ -1695,14 +1700,14 @@ article:after {
     margin-right: 10%;
   }
 }
-#emPessoas li.botaoTopo a {
+#emInstitucional li.botaoTopo a {
   color: #fff;
   padding: 0 10px;
   margin-top: 10px;
   display: block;
 }
-@media (max-width: 1280px) {
-  #emPessoas li.botaoTopo a {
+@media (max-width: 960px) {
+  #emInstitucional li.botaoTopo a {
     line-height: 3;
     margin-top: 0;
   }
@@ -1754,9 +1759,9 @@ article:after {
   margin-right: auto;
   display: block;
   background-color: #919190 !important;
-  background-position: 300px top !important;
+  background-position: right top !important;
   background-size: contain !important;
-  height: 250px;
+  height: 200px;
   color: #fff;
   padding: 10px;
   margin-bottom: 10px;
@@ -1785,6 +1790,15 @@ article:after {
 }
 .boxPessoas#box4 {
   background: url(img/dnaPreBanner.png) no-repeat;
+}
+.boxPessoas#sus1 {
+  background: url(img/inovacaoLamp.png) no-repeat;
+}
+.boxPessoas#sus2 {
+  background: url(img/inovacaoFolha.png) no-repeat;
+}
+.boxPessoas#sus3 {
+  background: url(img/inovacaoPessoas.png) no-repeat;
 }
 
 .page-template-template-pessoas .pageCabecalho {
@@ -1894,3 +1908,34 @@ article:after {
   margin-right: 0.8333333333%;
   font-size: 2rem;
 }
+
+.cadaDepoimento {
+  position: relative;
+  width: 49.2424242424%;
+  float: left;
+  margin-left: 0.3787878788%;
+  margin-right: 0.3787878788%;
+  height: 150px;
+  background-color: #eaeaea;
+}
+.cadaDepoimento h4 {
+  color: #2C97BE;
+  text-transform: uppercase;
+  font-size: 2rem;
+  margin-top: 20px;
+  margin-bottom: 10px;
+}
+.cadaDepoimento p {
+  font-size: 1.5rem;
+}
+.cadaDepoimento .thumbVideo {
+  float: left;
+  width: 150px;
+  height: 150px;
+  margin-right: 15px;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
+}
+
+/*# sourceMappingURL=style.css.map */
